# KittenSdkEncryption

./: CMakeLists.txt  README.md  build.sh  encrypt.sh
include/: decryptor_linux.h  decryptor_qnx.h  test_class.h
src/: decryptor_linux.cpp  decryptor_qnx.cpp  encrypt_linux.cpp  encrypt_qnx.cpp  run_test.cpp  test_class.cpp
